--- a/docs/bibliography.tex
+++ b/docs/bibliography.tex
@@ -96,4 +96,8 @@ Strona internetowa sprzedawcy czujnika inercji. \\
 Dokumentacja ODE z wyjaśnieniem działania kolizji. \\
 \url{http://ode-wiki.org/wiki/index.php?title=Manual:_Joint_Types_and_Functions#Contact}
 
+\bibitem{andymark}
+Strona internetowa producenta kół Mecanum, użytych w platformie. \\
+\url{http://www.andymark.com/8in-Mecanum-HD-Set-p/am-2118.htm}
+
 \end{thebibliography}
