--- a/docs/abstract.tex
+++ b/docs/abstract.tex
@@ -7,7 +7,7 @@
 		Model ten będzie służyć do wstępnych badań algorytmów planowania ruchu i sterowania robotem mobilnym.
 
 		Rozpatrzone są tutaj wymagania i problemy przy tworzeniu każdego ze składników środowiska.
-		Na system składają się wirtualne efektory i receptory obsługujące odpowiednią maszynę symulacyjną, a także moduły wspomagające symulację.
+		Na system składają się wirtualne efektory i receptory obsługujące odpowiednią maszynę symulacyjną, a także pakiety wspomagające symulację.
 		Do wykonania zadania użyto programowej struktury ramowej ROS i symulatora Gazebo.
 		
 		W ramach pracy, stworzone zostały modele dynamiczne, oraz kinematyczne platformy.
