--- a/docs/model.tex
+++ b/docs/model.tex
@@ -346,7 +346,7 @@ Bardziej zaawansowany program sterujący mógłby generować zadane prędkości 
 	W przyszłości zastosować trzeba będzie bardziej zaawansowany algorytm uśredniania odczytów.
 	Może on być również testowany na tym modelu.
 	
-	Stworzenie tego modułu pozwoliło zbadać, czy model jednostki inercyjnej reaguje na ruch platformy w odpowiednim kierunku, gdyż
+	Stworzenie tego programu pozwoliło zbadać, czy model jednostki inercyjnej reaguje na ruch platformy w odpowiednim kierunku, gdyż
 	pomiary są obarczone tak dużymi błędami, że wizualizacja odczytów na wykresie nie daje gwarancji upewnienia się o działaniu modelu.
 	
 \section{Obserwator symulacji}
