--- a/docs/robot.tex
+++ b/docs/robot.tex
@@ -179,7 +179,7 @@
 		\begin{figure}[H]
 		\centering
 		\includegraphics[width=\textwidth]{graphics/vectors.pdf}
-		\caption{Wektory momentu siły i siły koła Mechanum, widzianego z góry.}
+		\caption{Wektory momentu siły i siły koła Mecanum, widzianego z góry.}
 		\label{fig:wheel_vectors}
 		\end{figure} 
 
